added cert check